appId: com.mulaisekarang.app
name: Login as admin
---
- launchApp:
    clearState: true
- assertVisible:
    id: "email_input"
- tapOn:
    id: "email_input"
- inputText: "admin@mulaisekarang.com"
- tapOn:
    id: "password_input"
- inputText: "591VVrJdrhHy7tBQ"
- hideKeyboard
- tapOn:
    id: "login_button"
- extendedWaitUntil:
    visible:
      id: "nav_tab_beranda"
    timeout: 30000
